# nbcu-metadata-enhancement

./: .flake8  .gitignore  .pre-commit-config.yaml  AutomaticTagging.pptx  Makefile  Model_Structure.pptx  README.md  bibcd.yml  mlcli.yaml  pipeline.yaml  ~$Model_Structure.pptx
training/: Dockerfile  Dockerfile.old  Makefile  README.md  build.yaml  pipeline_commands.sh  pyproject.toml
training/.ipynb_checkpoints/: build-checkpoint.yaml  pyproject-checkpoint.toml
training/cd-scripts/: cdBuild.sh  prBuild.sh
training/notebooks/: Dockerfile  Experiment_logs.xlsx  Explore Raw Tags Content to Content Recommendation 01.ipynb  Explore Raw Tags Content to Content Recommendation 02.ipynb  Explore Titles Embeddings.ipynb  Explore model embeddings 05 Synopsis And Keywords Focal Loss Model TODO.ipynb  Explore model embeddings 06 Synopsis And Synopsis Tokens Focal Loss Model.ipynb  Explore model embeddings 07 Synopsis with Keyword Averaged Title Embeddings.ipynb  Explore model embeddings 08 Synopsis with Alternative Keyword Averaged Title Embeddings.ipynb  Explore model embeddings 09 Synopsis with Titles New Labels.ipynb  Explore model embeddings 10 Synopsis with New Clustered Labels.ipynb  Generate_Schema.ipynb  Interactive_TFX.ipynb  Make Title Embeddings based on Keyword Embedding Mean.ipynb  README.md  Run TFX Pipeline.ipynb  Serving_Experiments.ipynb  build.yaml  data_analysis.md
training/notebooks/Initial_Experiments/: Evaluation.ipynb  (+4 more)
training/src/: Dockerfile  beam_pipeline.py  build.yaml  kubeflow_dag_runner.py  local_runner.py  model_run.sh  run_functional_tests.sh
(+58 files in other folders)
