[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["simon-butt <simon.butt@sky.uk>"]

[tool.poetry.dependencies]
python = ">=3.6.9,<3.9"
tfx = "0.26.0"
gcsfs = "0.7.1"
pandas = "1.1.3"
tensorflow = "2.3.1"
apache-beam = "2.25.0"
google-cloud-storage = "1.32.0"
kfp = "1.0.4"
tensorflow-text = "2.3.0"
tensorflow-hub = "0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
